[project]
name = "b2t-study-prophet"
version = "0.1.0"
description = "study ML prophet"
authors = [
    {name = "dmario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "prophet>=1.1.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
