[project]
name = "b2t-study-prophet"
version = "0.2.0"
description = "study ML prophet"
authors = [
    {name = "dmario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "prophet>=1.1.4",
    "plotly>=5.16.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]
